# bilingual-interest-detection

./: .gitignore  README.md  pyproject.toml
docs/: scoring.md
examples/: check_interest.py
src/bilingual_interest_detection/: __init__.py  cli.py  defaults.py  schemas.py  scorer.py
tests/: test_scorer.py
