[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilingual-interest-detection"
version = "0.1.0"
description = "Lightweight bilingual user-interest scoring for dialogue systems."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Mario Rodriguez Cantelar" }
]
keywords = [
  "interest-detection",
  "dialogue-system",
  "keyword-matching",
  "regex",
  "bilingual",
  "nlp"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5"
]

[project.scripts]
interest-detect = "bilingual_interest_detection.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

